Translate 07_1_09.md via GitLocalize

--- a/pt/07_1_09.md
+++ b/pt/07_1_09.md
@@ -27,7 +27,7 @@ girls:
 
 # Des exercícios
 
-## Exercices 1
+## Exercícios 12
 
 1. Quel âge as-tu?
 2. Où est ta nouvelle voiture ? - Là-bas.
@@ -38,7 +38,7 @@ girls:
 - Quelâge ont-ils?
 - Quel âge as-tu?
 
-# Devis
+# Devise
 
 > La vie est comme une boîte de chocolats, tu ne sais jamais ce que tu vas avoir
 >
