Translate advanced_autodiff.ipynb via GitLocalize

--- a/de/advanced_autodiff.ipynb
+++ b/de/advanced_autodiff.ipynb
@@ -126,7 +126,7 @@
       "source": [
         "Wenn Sie die Aufzeichnung von Farbverläufen beenden möchten, können Sie `GradientTape.stop_recording()` verwenden, um die Aufzeichnung vorübergehend auszusetzen.\n",
         "\n",
-        "This may be useful to reduce overhead if you do not wish to differentiate a complicated operation in the middle of your model.  This could include calculating a metric or an intermediate result:"
+        "Dies kann nützlich sein, um den Overhead zu reduzieren, wenn Sie eine komplizierte Operation nicht in der Mitte Ihres Modells unterscheiden möchten. Dies könnte die Berechnung einer Metrik oder eines Zwischenergebnisses umfassen:"
       ]
     },
     {
